-Resized all the images to them uniform. -Changed Color Pallet. -Removed extra margins and padding. -Restructred a huge chunk of html and css code to make the menu page look perfectly responsive -Changed fonts -Removed shadow from the Nav Bar -Renamed incorrectly named category names in the menu bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,20 @@
 *{
     box-sizing: border-box;
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #080705;
 }
 body{
-    background-color: #BF0603;
+    background-color: #61120E;
     width: 100%;
 }
 h1,h2,h3,
 .foodprice{
-    font-family: Impact, Charcoal, sans-serif;
-    color: #BF0603;
-    font-weight: lighter;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #61120E;
+    font-weight: bold;
 }
 p{
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #080705;
     font-size: 1.1em;
 }
@@ -36,38 +36,41 @@ h3{
     Thanks
 */
 .order_parent{
-  margin: 1%;
 }
 .menu_nav{
     padding: 1.5%;
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(3.5em, 1fr));
     justify-items: center;
-    font-family: Impact, Charcoal, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.2em;
     list-style: none;
 }
 .order_item{
-    background-color: #E6C3A6;
+    background-color: #CA2521;
     padding: 1%;
     margin-bottom: 2.5%;
 }
+.order_item h2{
+  color: #eca442;
+  margin-bottom: 1%;
+}
 .order_container{
-    background-color: #FFF1D0;
+    background-color: #ECA442;
 }
 .payment{
     display: none;
-    background-color: #FFF1D0;
+    background-color: #ECA442;
     padding: 1%;
 }
 article.confirmation{
-    background-color: #FFF1D0;
+    background-color: #ECA442;
     padding: 1%;
     display: none;
 }
 .order_status_bar{
     display: grid;
-    background-color: #FFF1D0;
+    background-color: #ECA442;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     padding: 2.5%;
@@ -99,8 +102,6 @@ article.confirmation{
     Thanks
 */
 /*styles for the all the cards starts here*/
-.cardItem{
-}
 .card_component{
   width: 85%;
   padding: 4.5%;
@@ -108,69 +109,82 @@ article.confirmation{
   text-align: left;
 }
 strong{
-  color: #bf0603;
-  font-weight: bolder;
+  color: #61120E;
+  font-weight: bold;
 }
 .foodname{
   font-size: 1.3em;
-  font-family: Impact, Charcoal, sans-serif;
-  color: #BF0603;
-  font-weight: lighter;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #61120E;
+  font-weight: bold;
 }
 img.cardImage{
   max-width: 100%;
 }
+.addtocart-btn{
+  border: none;
+  width: 25%;
+  background-color: #61120E;
+  padding: 1.5%;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1em;
+  color: #ECA442;
+  margin: 1.0%;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 2.5px;
+}
+div.cardItem{
+  width: 50%;
+}
+div.cardImage{
+  width: 40%;
+}
+img.cardImage{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 .food_item{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(8em, 1fr));
-  background-color: #FFF1D0;
+  display: flex;
+  background-color: #ECA442;
   margin-bottom: 1%;
+  justify-items: center;
   position: relative;
 }
 .button1,
 .remove-button{
   border: none;
-  background-color: #bf0603;
+  background-color: #61120E;
   padding: 1.5%;
   text-decoration: none;
   font-weight: bold;
   font-size: 1em;
-  color: #FFF1D0;
+  color: #ECA442;
   margin: 1.0%;
   cursor: pointer;
   border-radius: 2.5px;
 }
 .button1:hover{
     background-color: brown;
-    color: #FFF1D0;
+    color: #ECA442;
 }
 .card_component{
   padding: .25%;
 }
 
 /*styles for the cart starts here*/
-.addtocart-btn{
-  border: none;
-  background-color: #bf0603;
-  padding: 1.5%;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 1em;
-  color: #FFF1D0;
-  max-width: 40%;
-  margin: 1.0%;
-  cursor: pointer;
-  border-radius: 5px;
-  text-align: center;
-}
 .cart_contents{
   display: flex;
   flex-wrap: wrap;
 }
 h2.cart-main-heading{
-  font-weight: bold;
-  font-size: 2em;
-  color: #bf0603;
+  width: 100%;
+  text-align: center;
+}
+.view_cart{
+  width: 100%;
 }
 .cart-heading{
   font-weight: bold;
@@ -243,11 +257,9 @@ div span.food-sum-price{
   font-size: 1.7em;
 }
 .cart_summary{
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  justify-items: left;
-  margin: 2.5%;
+  display: flex;
   justify-items: center;
+  margin: 2.5%;
 }
 .cart_contents{
   display: none;
@@ -259,9 +271,8 @@ header {
   position: relative;
   width: 100%;
   margin: 20px auto;
-  background: #FFF1D0;
+  background: #ECA442;
   box-sizing: border-box;
-  box-shadow: 0 8px 10px black;
 }
 
 .logo{
@@ -305,14 +316,14 @@ nav ul li a{
 }
 
 nav ul li a.active {
-  background: #E6C3A6;
-  color: #BF0603;
+  background: #CA2521;
+  color: #61120E;
   transition: 0.35s;
 }
 nav ul li a:hover{
   opacity: 0.75;
-  color: #BF0603;
-  background: #E6C3A6;
+  color: #61120E;
+  background: #CA2521;
   transition: 0.35s;
 }
 
@@ -327,7 +338,7 @@ nav ul li a:hover{
     cursor: pointer;
     text-align: center;
     font-size: 30px;
-    color: #BF0603;
+    color: #61120E;
   }
   .navigation-toggle:before {
     content: "\f0c9";
@@ -353,13 +364,21 @@ nav ul li a:hover{
     margin: 0;
   }
 }
-@media screen and (max-width: 700px) {
-  .cardImage{
-    display: none;
+@media screen and (max-width: 750px) {
+  div.cardItem{
+    width: 100%;
+    height: 30vh;
+  }
+  .food_item{
+    flex-direction: column;
+    margin-bottom: 3%;
   }
   .cart-image{
     display: none;
   }
+  .order_item{
+    padding: 2.5%;
+}
 }
 /*footer*/
 .fa {
@@ -379,21 +398,21 @@ nav ul li a:hover{
 }
 .fa-facebook-f {
     background:rgba(255, 255, 255, 0);
-    color: #bf0603;
+    color: #61120E;
 
 }
 
 .fa-instagram{
-    color: #bf0603;
+    color: #61120E;
 }
 .fa-google{
-    color: #bf0603;
+    color: #61120E;
 }
 .fa-youtube{
-    color:#bf0603;
+    color:#61120E;
 }
 .fa-envelope{
-    color:#bf0603;
+    color:#61120E;
 }
 
 .container {
@@ -402,7 +421,7 @@ nav ul li a:hover{
     align-items: flex-end;
     align-content: flex-end;
     justify-items: center;
-    background: #bf0603;
+    background: #61120E;
 
     padding:2.5%;
 }
@@ -421,11 +440,11 @@ nav ul li a:hover{
   
 }
 .dec li.footeritem{
-    color: #bf0603;
+    color: #61120E;
     font-size:1.2em;
     height: 60px;
     width:60px;
-    background: #fff1d0;
+    background: #ECA442;
     line-height:60px;
     border-radius:50%;
     margin: 5%;
@@ -452,9 +471,9 @@ nav ul li a:hover{
     box-shadow: 0 0 30px #d35400;
 }
 .dec li.footeritem:hover{
-    color: #bf0603;
+    color: #61120E;
     box-shadow: 0 20px 50px #060606;
-    text-shadow: 0 20px 50px #bf0603;
+    text-shadow: 0 20px 50px #61120E;
 }
 
 
@@ -464,13 +483,13 @@ a.footerbottom{
 }
 a.footerbottom:link{
 
-    color: #fff1d0;
-    font-family: Impact, Charcoal, sans-serif;
+    color: #ECA442;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
 
 }
 a.footerbottom:visited{
-    color: #fff1d0;
+    color: #ECA442;
     text-decoration: none;
 }
 a.footerbottom:hover{
@@ -478,7 +497,7 @@ a.footerbottom:hover{
 }
 
 a.footerbottom:visited{
-    color: #fff1d0;
+    color: #ECA442;
     text-decoration: none;
 }
 a.footerbottom:hover{
@@ -492,18 +511,18 @@ a.footerbottom:active{
 
 /*main container*/
 .flex-container{
-    background-color: #bf0603;
+    background-color: #61120E;
     display: flex;
     height:100%;
 }
 .flex-container>div{
-    background-color: #fff1d0;
+    background-color: #ECA442;
     width:100%;
     margin: 200px 30px 40px 30px;
     border-radius: 10px;
 }
 .child-container>div{
-    background-color: #fff1d0;
+    background-color: #ECA442;
     display: flex;
     width:15%;
     margin: 20px 30px 20px 30px;
@@ -514,8 +533,8 @@ a.footerbottom:active{
 }
 
 .footer1{
-    font-family: Impact, Charcoal, sans-serif;
-    color: #fff1d0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #ECA442;
     font-size:25px;
     font-weight: lighter;
 
