--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,10 @@
     color: #080705;
 }
 body{
-    background-color: #61120E;
+    background: linear-gradient(to top, black, 10%, #FFF1D0);
     width: 100%;
 }
+/*#61120E*/
 h1,h2,h3,
 .foodprice{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -47,17 +48,18 @@ h3{
     list-style: none;
 }
 .order_item{
-    background-color: #CA2521;
+    background: linear-gradient(to top, #CA2521, 80%, #FFF1D0);
     padding: 1%;
     margin-bottom: 2.5%;
 }
 .order_item h2{
-  color: #eca442;
+  color: #61120E;
   margin-bottom: 1%;
 }
 .order_container{
-    background-color: #ECA442;
+    background: linear-gradient(to top, #ECA442, 20%, #FFF1D0);;
 }
+/*#ECA442*/
 .payment{
     display: none;
     background-color: #ECA442;
@@ -146,9 +148,14 @@ img.cardImage{
   width: 100%;
   object-fit: cover;
 }
+
+.foodnametopic {
+  color: ;
+}
+
 .food_item{
   display: flex;
-  background-color: #ECA442;
+  background: linear-gradient(to top, #FFF1D0, 30%, #ECA442);
   margin-bottom: 1%;
   justify-items: center;
   position: relative;
@@ -166,6 +173,7 @@ img.cardImage{
   cursor: pointer;
   border-radius: 2.5px;
 }
+/*#61120E*/
 .button1:hover{
     background-color: brown;
     color: #ECA442;
@@ -270,8 +278,9 @@ div span.food-sum-price{
 header {
   position: relative;
   width: 100%;
-  margin: 20px auto;
-  background: #ECA442;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  background: linear-gradient(to top, #FFF1D0, 5%, #ECA442);
   box-sizing: border-box;
 }
 
@@ -437,7 +446,7 @@ nav ul li a:hover{
     grid-template-columns: repeat(auto-fit, minmax(3em, 1fr));
 }
 .dec ul{
-  
+
 }
 .dec li.footeritem{
     color: #61120E;
