--- a/styles/style.css
+++ b/styles/style.css
@@ -699,7 +699,7 @@ Common Page styling ends here, please don't before consulting IXD
   padding: 2.5%;
 }
 
-p.highlight {
+.highlight {
   font-weight: bold;
 }
 
@@ -784,51 +784,4 @@ div.dealcardBar{
   font-style: italic;
 }
 
-div.catering_description{
-  align-self: flex-start;
-}
-
-div.catering{
-  height: unset;
-}
-div.booking_process{
-  width: 100%;
-  margin: 1.5%;
-  margin-top: 2.5%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(10em, 1fr));
-}
-
-figure.booking_process{
-  width: 100%;
-  padding-left: 25%;
-  padding-right: 25%;
-  text-align: center;
-}
-
-figure.booking_process img{
-  width: 100%;
-}
-div.booking_description{
-  align-self: flex-start;
-}
-div.catering{
-  display: flex;
-}
-div.catering_form .form_element{
-  width: 90%;
-  background-color: transparent;
-  border-bottom: black solid;
-}
-div.booking_form{
-  width: 100%;
-}
-figure.booking{
-  width: 100%;
-  padding-left: 25%;
-  padding-right: 25%;
-}
-figure.booking img{
-  width: 100%;
-}
 /*Catering page unique content styling ends here*/
