--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,11 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #080705;
 }
+.ui-datepicker-calendar {
+  display: none;
+}​
 body{
-    background-color: #61120E;
+    background-color: #CA2521;
     width: 100%;
 }
 h1,h2,h3,
@@ -14,7 +17,7 @@ h1,h2,h3,
     font-weight: bold;
 }
 .foodprice{
-  color: #61120E;
+  color: #CA2521;
 }
 p{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -37,7 +40,7 @@ h3{
     border: none;
     font-style: italic;
     padding: 1.5%;
-    background-color: white;
+    background-color: #F9F3C5;
     color: black;
     width: 25%;
 }
@@ -46,7 +49,7 @@ h3{
     Thanks
 */
 .order_parent{
-  margin-top: 10vh;
+  margin-top: 8vh;
 }
 .menu_nav{
     padding: 1.5%;
@@ -63,25 +66,25 @@ h3{
     margin-bottom: 2.5%;
 }
 .order_item h2{
-  color: #eca442;
+  color: #F9F3C5;
   margin-bottom: 1%;
 }
 .order_container{
-    background-color: #ECA442;
+    background-color: #F9F3C5;
 }
 .payment{
     display: none;
-    background-color: #ECA442;
+    background-color: #F9F3C5;
     padding: 1%;
 }
 article.confirmation{
-    background-color: #ECA442;
+    background-color: #F9F3C5;
     padding: 1%;
     display: none;
 }
 .order_status_bar{
     display: grid;
-    background-color: #ECA442;
+    background-color: #F9F3C5;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     padding: 2.5%;
@@ -136,13 +139,13 @@ article.confirmation{
   text-align: left;
 }
 strong{
-  color: #61120E;
+  color: #CA2521;
   font-weight: bold;
 }
 .foodname{
   font-size: 1.3em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #61120E;
+  color: #CA2521;
   font-weight: bold;
 }
 img.cardImage{
@@ -151,12 +154,12 @@ img.cardImage{
 .addtocart-btn{
   border: none;
   width: 25%;
-  background-color: #61120E;
+  background-color: #CA2521;
   padding: 1.5%;
   text-decoration: none;
   font-weight: bold;
   font-size: 1em;
-  color: #ECA442;
+  color: #F9F3C5;
   margin: 1.0%;
   cursor: pointer;
   text-align: center;
@@ -175,7 +178,7 @@ img.cardImage{
 }
 .food_item{
   display: flex;
-  background-color: #ECA442;
+  background-color: #F9F3C5;
   margin-bottom: 1%;
   justify-items: center;
   position: relative;
@@ -184,19 +187,19 @@ img.cardImage{
 .button1,
 .remove-button{
   border: none;
-  background-color: #61120E;
+  background-color: #CA2521;
   padding: 1.5%;
   text-decoration: none;
   font-weight: bold;
   font-size: 1em;
-  color: #ECA442;
+  color: #F9F3C5;
   margin: 1.0%;
   cursor: pointer;
   border-radius: 2.5px;
 }
 .button1:hover{
     background-color: brown;
-    color: #ECA442;
+    color: #F9F3C5;
 }
 .card_component{
   padding: .25%;
@@ -299,7 +302,7 @@ div span.food-sum-price{
 header {
   position: relative;
   width: 100%;
-  background: #ECA442;
+  background: #E9E581;
   box-sizing: border-box;
   position: fixed;
   top: 0;
@@ -348,12 +351,12 @@ nav ul li a{
 
 nav ul li a.active {
   background: #CA2521;
-  color: #61120E;
+  color: #CA2521;
   transition: 0.35s;
 }
 nav ul li a:hover{
   opacity: 0.75;
-  color: #61120E;
+  color: #CA2521;
   background: #CA2521;
   transition: 0.35s;
 }
@@ -375,20 +378,20 @@ nav ul li a:hover{
 }
 .fa-facebook-f {
     background:rgba(255, 255, 255, 0);
-    color: #61120E;
+    color: #CA2521;
 
 }
 .fa-instagram{
-    color: #61120E;
+    color: #CA2521;
 }
 .fa-google{
-    color: #61120E;
+    color: #CA2521;
 }
 .fa-youtube{
-    color:#61120E;
+    color:#CA2521;
 }
 .fa-envelope{
-    color:#61120E;
+    color:#CA2521;
 }
 .container {
     text-align: center;
@@ -396,7 +399,7 @@ nav ul li a:hover{
     align-items: flex-end;
     align-content: flex-end;
     justify-items: center;
-    background: #61120E;
+    background: #CA2521;
 
     padding:2.5%;
 }
@@ -411,11 +414,11 @@ nav ul li a:hover{
     grid-template-columns: repeat(auto-fit, minmax(3em, 1fr));
 }
 .dec li.footeritem{
-    color: #61120E;
+    color: #CA2521;
     font-size:1.2em;
     height: 60px;
     width:60px;
-    background: #ECA442;
+    background: #F9F3C5;
     line-height:60px;
     border-radius:50%;
     margin: 5%;
@@ -442,22 +445,22 @@ nav ul li a:hover{
     box-shadow: 0 0 30px #d35400;
 }
 .dec li.footeritem:hover{
-    color: #61120E;
+    color: #CA2521;
     box-shadow: 0 20px 50px #060606;
-    text-shadow: 0 20px 50px #61120E;
+    text-shadow: 0 20px 50px #CA2521;
 }
 a.footerbottom{
   font-size: .85em;
 }
 a.footerbottom:link{
 
-    color: #ECA442;
+    color: #F9F3C5;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
 
 }
 a.footerbottom:visited{
-    color: #ECA442;
+    color: #F9F3C5;
     text-decoration: none;
 }
 a.footerbottom:hover{
@@ -465,7 +468,7 @@ a.footerbottom:hover{
 }
 
 a.footerbottom:visited{
-    color: #ECA442;
+    color: #F9F3C5;
     text-decoration: none;
 }
 a.footerbottom:hover{
@@ -477,18 +480,18 @@ a.footerbottom:active{
 }
 /*main container*/
 .flex-container{
-    background-color: #61120E;
+    background-color: #CA2521;
     display: flex;
     height:100%;
 }
 .flex-container>div{
-    background-color: #ECA442;
+    background-color: #F9F3C5;
     width:100%;
     margin: 200px 30px 40px 30px;
     border-radius: 10px;
 }
 .child-container>div{
-    background-color: #ECA442;
+    background-color: #F9F3C5;
     display: flex;
     width:15%;
     margin: 20px 30px 20px 30px;
@@ -500,7 +503,7 @@ a.footerbottom:active{
 
 .footer1{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #ECA442;
+    color: #F9F3C5;
     font-size:25px;
     font-weight: lighter;
 
@@ -527,7 +530,7 @@ div.intro_slider img{
 .slider_shade{
   position: fixed;
   top: 0;
-  background-color: lightgray;
+  background-color: #E9E581;
   opacity: 0.7;
   z-index: -1;
 }
@@ -549,7 +552,7 @@ div.intro_slider img{
 .unique_content{
   height: 100vh;
   width: 100vw;
-  background-color:white;
+  background-color:#F9F3C5;
   padding: 2.5%;
 }
 /*
@@ -616,7 +619,7 @@ Common Page styling ends here, please don't before consulting IXD
     cursor: pointer;
     text-align: center;
     font-size: 30px;
-    color: #61120E;
+    color: #CA2521;
   }
   .navigation-toggle:before {
     content: "\f0c9";
@@ -695,7 +698,7 @@ Common Page styling ends here, please don't before consulting IXD
 /*homepage unique content*/
 
 .home_unique_content{
-  background-color:white;
+  background-color:#F9F3C5;
   padding: 2.5%;
 }
 
