--- a/styles/style.css
+++ b/styles/style.css
@@ -356,7 +356,7 @@ nav ul li a.active {
 }
 nav ul li a:hover{
   opacity: 0.75;
-  color: #CA2521;
+  color: white;
   background: #CA2521;
   transition: 0.35s;
 }
