--- a/styles/style.css
+++ b/styles/style.css
@@ -807,3 +807,55 @@ div.dealcardBar{
 }
 
 /*Catering page unique content styling ends here*/
+
+/* ------More Options------*/
+.gallery {
+    width:auto;
+    margin: 20px 0px 5px 200px;
+    float:left;
+}
+.gallery img{
+    transition: 1s;
+    width:50%;
+    height:auto;
+
+}
+.gallery img:hover{
+
+    transform:scale(1.4);
+}
+.desc{
+    font-size: 25px;
+    text-align: center;
+    width:50%;
+
+}
+.footer{
+    height:50px;
+    margin-top:-50px;
+    flex-shrink: 0;
+}
+/* Review Us*/
+.desc2{
+    font-size:40px;
+    color:#CA2521;
+    font-weight: bold;
+    text-align: -moz-center;
+    width:50%;
+    padding:20px;
+    text-decoration: none;
+}
+
+.rate {
+    width: auto;
+    height:auto;
+}
+.gal{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #080705;
+    font-size: 1.1em;
+    padding:20px;
+    text-align: justify;
+}
+
+
