--- a/styles/style.css
+++ b/styles/style.css
@@ -421,7 +421,8 @@ nav ul li a:hover{
     background: #F9F3C5;
     line-height:60px;
     border-radius:50%;
-    margin: 5%;
+    margin-left:30%;
+    margin-right: 30%;
     cursor:pointer;
     transition: .3s;
     position: center;
@@ -822,7 +823,7 @@ div.dealcardBar{
 }
 .gallery img:hover{
 
-    transform:scale(1.4);
+    transform:scale(1.9);
 }
 .desc{
     font-size: 25px;
@@ -835,7 +836,7 @@ div.dealcardBar{
     margin-top:-50px;
     flex-shrink: 0;
 }
-/* Review Us*/
+
 .desc2{
     font-size:40px;
     color:#CA2521;
