--- a/styles/style.css
+++ b/styles/style.css
@@ -809,83 +809,13 @@ div.dealcardBar{
 
 /*Catering page unique content styling ends here*/
 
-/* ------More Options------*/
-.gallery {
-    width:auto;
-    margin: 20px 0px 5px 200px;
-    float:left;
-
-}
-.gallery img{
-    transition: 1s;
-    width:50%;
-    height:auto;
-
-}
-.gallery img:hover{
-
-    transform:scale(1.9);
-}
-.desc{
-    font-size: 25px;
-    text-align: center;
-    width:50%;
-
-}
-.footer{
-    height:50px;
-    margin-top:-50px;
-    flex-shrink: 0;
-}
-
 /* -----Map----*/
 
-.desc2{
-    font-size:40px;
-    color:#CA2521;
-    font-weight: bold;
-    text-align: -moz-center;
-    width:50%;
-    padding:20px;
-    text-decoration: none;
-}
-
-.rate {
-    width: auto;
-    height:auto;
-}
-.gal{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #080705;
-    font-size: 1.1em;
-    padding:20px;
-    text-align: justify;
-}
-
-.Darwin{
-    Font-size:60px;
-    color: #bf0603;
-    font-weight:bold;
-    position: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 .map{
-    position:center;
-    float: right;
-    width:900px;
-    height:800px;
-    margin-right:200px;
-    margin-top:40px;
-    padding-top: 20px;
-
-
-}
-.schedule{
-    Font-size:20px;
-    color: #636363;
-    float:left;
-    margin-left:200px;
-
-    font-family: 'Helvetica Neue';
+    width:250px;
+    height:250px;
 }
 
+.opening_hours{
+  width: 70%;
+}
